--- a/client/app/links/links.html
+++ b/client/app/links/links.html
@@ -5,7 +5,7 @@
     <div class='visits'><span class='count'>{{link.visits}}</span>Visits</div>
     <div class='title'>{{link.title}}</div>
     <div class='original'>{{link.url}}</div>
-    <a href='{{baseUrl}}/{{code}}'>{{link.baseUrl}}/{{link.code}}</a>
+    <a href='{{link.baseURL}}/{{link.code}}' ng-click="Links.getOne(link.code)">{{link.baseUrl}}/{{link.code}}</a>
   </div>
 
 </div>
