Finished the nevigation part

--- a/client/app/links/links.html
+++ b/client/app/links/links.html
@@ -1,4 +1,4 @@
-<div id='container' ng-controller='LinksController' >
+<div id='links' ng-controller='LinksController' >
 
   <div class='info' ng-repeat="link in data.links">
     <img src='/redirect_icon.png'/>
